--- a/LyricsGerator.ipynb
+++ b/LyricsGerator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMorEun0UIye6DIjRfhDuJ0",
+      "authorship_tag": "ABX9TyPIY3S3BHzBOr06O48cmOU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,6 +382,50 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pyttsx3\n",
+        "\n",
+        "class TextToSpeech:\n",
+        "    engine: pyttsx3.Engine\n",
+        "\n",
+        "    def __init__(self, voice, rate: int, volume: float):\n",
+        "        self.engine = pyttsx3.init()\n",
+        "        if voice:\n",
+        "            self.engine.setProperty('voice', voice)\n",
+        "        self.engine.setProperty('rate', rate)\n",
+        "        self.engine.setProperty('volume', volume)  # Between 0 and 1\n",
+        "\n",
+        "    def text_to_speech(self, text: str, save: bool = False, file_name='output.mp3'):\n",
+        "        self.engine.say(text)\n",
+        "        print('I\\'m speaking...')\n",
+        "\n",
+        "        if save:\n",
+        "            # On linux make sure that 'espeak' and 'ffmpeg' are installed\n",
+        "            self.engine.save_to_file(text, file_name)\n",
+        "\n",
+        "        self.engine.runAndWait()\n",
+        "\n",
+        "    def list_available_voices(self):\n",
+        "        voices: list = [self.engine.getProperty('voices')]\n",
+        "\n",
+        "        for i, voice in enumerate(voices[0]):\n",
+        "            print(f'({i + 1}) {voice.name} {voice.age}: {voice.languages[0]} ({voice.gender}) [ID: {voice.id}]')\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    \n",
+        "    tts = TextToSpeech('com.apple.speech.synthesis.voice.kyoko', 200, 1.0)\n",
+        "    # tts.list_available_voices()\n",
+        "    tts.text_to_speech(seed_text, save=True, file_name='output.mp3')"
+      ],
+      "metadata": {
+        "id": "f9WDO70Ce-Kk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
